c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_parse/call_non_identifier.c
/* You can only call a function, not a constant.
   Our implementation will reject this during parsing.
   Because the C grammar permits this declaration,
   some compilers may reject it during type checking.
*/

int main(void) {
    return 1();
}